snapshots/syntax/library/statements/mid/multiple_mid_statements.snap
---
source: src/syntax/library/statements/string_manipulation/mid.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: ReplaceChars
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: MidStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: MidKeyword
                  text: Mid
                - kind: LeftParenthesis
                  text: (
                - kind: Identifier
                  text: line1
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: IntegerLiteral
                  text: "5"
                - kind: RightParenthesis
                  text: )
                - kind: Whitespace
                  text: " "
                - kind: EqualityOperator
                  text: "="
                - kind: Whitespace
                  text: " "
                - kind: StringLiteral
                  text: "\"HELLO\""
                - kind: Newline
                  text: "\n"
            - kind: MidStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: MidKeyword
                  text: Mid
                - kind: LeftParenthesis
                  text: (
                - kind: Identifier
                  text: line2
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: IntegerLiteral
                  text: "1"
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: IntegerLiteral
                  text: "3"
                - kind: RightParenthesis
                  text: )
                - kind: Whitespace
                  text: " "
                - kind: EqualityOperator
                  text: "="
                - kind: Whitespace
                  text: " "
                - kind: StringLiteral
                  text: "\"ABC\""
                - kind: Newline
                  text: "\n"
            - kind: MidStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: MidKeyword
                  text: Mid
                - kind: LeftParenthesis
                  text: (
                - kind: Identifier
                  text: line3
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: IntegerLiteral
                  text: "2"
                - kind: Comma
                  text: ","
                - kind: Whitespace
                  text: " "
                - kind: IntegerLiteral
                  text: "4"
                - kind: RightParenthesis
                  text: )
                - kind: Whitespace
                  text: " "
                - kind: EqualityOperator
                  text: "="
                - kind: Whitespace
                  text: " "
                - kind: StringLiteral
                  text: "\"TEST\""
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
